Added 'surak install' command, added documentation link to template

--- a/lib/template/src/app/templates/surak/default.tpl.html
+++ b/lib/template/src/app/templates/surak/default.tpl.html
@@ -1,1 +1,4 @@
-<h1>Hello World, I am Surak.</h1>
+<div layout="column" layout-align="start center">
+  <h1 class="thin">Hello World, I am Surak.</h1>
+  <md-button href="http://johnanthony-dev.com/surak/">Documentation</md-button>
+</div>
