--- a/lib/template/src/css/main.css
+++ b/lib/template/src/css/main.css
@@ -7,240 +7,6 @@ body {
   max-width: 100%;
 }
 
-.rounded {
-  border-radius: 4px;
-}
-
-.indented {
-  margin-left: 1em;
-}
-
-.slight-indent {
-  margin-left: 0.5em;
-}
-
-
-a {
-  text-decoration:none;
-}
-
-.text-grey {
-  color: grey;
-}
-
-.text-black {
-  color: black;
-}
-
-.text-white {
-  color: white;
-}
-
-.header {
-  margin-bottom: 5px;
-}
-
-.md-button {
-  color: grey !important;
-  font-weight: 500;
-}
-
-.subheader {
-  margin-bottom: 15px;
-}
-
-.hovered {
-  background-color: #F9F9F9;
-
-}
-
-.expanded {
-  background-color: #F9F9F9;
-  margin: 40px 0px 40px 0px;
-
-}
-
-.noborder {
-  border-style: hidden;
-  outline: none;
-}
-
-.project-container {
-  margin-left: 9px;
-  border-radius: 5px;
-}
-
-.project-extra-content {
-  padding: 1em;
-}
-
-.list-item {
-  padding: 10px 10px 20px 10px;
-  display: block;
-}
-
-.skill {
-  margin-left: 1em;
-  padding-bottom: 0.7em;
-}
-
-.sub-skill {
-  margin-left: 1em;
-  margin-top: 0.7em;
-  margin-bottom: 0.7em;
-
-}
-
-.centered-margins {
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.hover-left {
-  margin-right:1em;
-  margin-left:auto;
-}
-
-.hover-right {
-  margin-right:2em;
-  margin-left:auto;
-}
-
-.show-more {
-  margin-right: 1em;
-}
-
-.group:before,
-.group:after {
-    content: "";
-    display: table;
-}
-.group:after {
-    clear: both;
-}
-.group {
-    zoom: 1; /* For IE 6/7 (trigger hasLayout) */
-}
-
-
-.contact-item {
-  width: 25%;
-  padding: 1em 1em 1em 1em;
-  display: block;
-  color: white;
-  word-wrap: break-word;
-  text-decoration: none;
-  font-weight: 300;
-}
-
-h2 {
-  padding-left: 8px;
-  font-weight: 600;
-}
-
-h3 {
-  font-weight: 600;
-}
-
-h4 {
-  font-weight: 500;
-}
-
-h5 {
-  font-weight: 500;
-}
-
-.contact-btn {
-    text-transform: lowercase;
-    font-size: 10%;
-}
-
-.portfolio-header {
-  background-color: #26283C;
-  color: white;
-  margin: 3em 0em 3em 0em;
-  border-radius: 3px;
-  text-align: center;
-  width: 100%;
-
-}
-
-.portfolio-header .name {
-  font-size: 3.3em;
-  font-weight: 300;
-  margin-top:0.2em;
-  margin-bottom:0.2em;
-}
-
-.flex { flex : 1 1 0%; }
-
-#me {
-  width: 18%;
-}
-
-.clearfix {
-  overflow: auto;
-  zoom: 1;
-}
-
-
-.floating-frame {
-  border: 0px none;
-  min-height: 800px;
-  width: 100%;
-  min-width: 350px;
-}
-
-.portfolio-section {
-  width: 100%;
-  max-width: 100%;
-}
-
-
-
-@media (max-width: 1400px) {
-  .portfolio-header {
-    font-size: 0.9em;
-  }
-  .contact-item {
-    width: 50%;
-  }
-}
-
-@media (max-width: 960px) {
-  .portfolio-header {
-    margin: 1.4em;
-  }
-}
-
-@media (max-width: 700px) {
-  #me {
-    width: 22%;
-  }
-}
-
-@media (max-width: 600px) {
-  .portfolio-header {
-    font-size: 0.8em;
-  }
-
-  .portfolio-header {
-    margin: 0px;
-    border-radius: 0px;
-  }
-  .skill {
-    width: 30%;
-  }
-
-  .project-container {
-    margin-left: 5px;
-    margin-right: 5px;
-  }
-
-}
-
-@media (max-width: 500px) {
-  .contact-item {
-    width: 100%;
-  }
+.thin {
+  font-weight: 400;
 }
